--- a/DarkAccess/Labs/xss-challenge/package.json
+++ b/DarkAccess/Labs/xss-challenge/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "teste1",
-  "homepage": ".",
+  "name": "xss-challenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
